# Physical-Ai-Humanoid-Robotics-Book

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  constitution_draft.md  docker-compose.yml  index.html  main.py  pyproject.toml  requirements.txt  sitemap.xml  updated_constitution.md
.claude/: settings.local.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
assets/css/: styles.d4c75c98.css
assets/js/: 038364c3.7a1c3e2d.js  0e384e19.57691109.js  0f1c667d.287d315f.js  138d4ba9.da1e01a9.js  17896441.5e57f54b.js  18b2a89b.505372f7.js  1a46bdb7.24393cb2.js  1c124cc4.4daaed17.js  2237.91177d9e.js  2ad3c29c.f23b3785.js  2b85b86f.b1cd3307.js  2c70b7c0.68aadbdd.js  3954f9af.19f66a4a.js  45d6b1bc.0583413d.js  4678eda3.fed64606.js  514b3d87.5e1b7484.js  593e9074.372b1406.js  5a64fa09.1233aeef.js  5d0113b9.0009d1c0.js  5d586cab.6ad366c9.js  5e95c892.41add89d.js  61cfc676.f31304d3.js  64b0f000.9f7b23f3.js  6d0685e6.3f9e9327.js  7646dd2b.aecdaacf.js  769c0afd.c47bfbdd.js  79e86095.5628fdea.js  7a374993.a25e9864.js  85bc3609.cd9e8c97.js  984c6c31.f96022d7.js  9d28b5f2.19da2331.js  a1cdf69a.cbeca3be.js  a279d201.7312996d.js  a389150e.6e05c696.js  a90fec0b.ab4cd1ce.js  a94703ab.974fd3e3.js  b1287e91.99acb0e6.js  b2f6feba.86055e99.js  b65d29a1.87a5ebc7.js  b6c47cc3.602089de.js  (+34 more)
docs/accessibility-statement/: index.html
docs/appendix/assessment-methods/: index.html
docs/appendix/external-service-failure-handling/: index.html
docs/appendix/hardware-guide/: index.html
docs/appendix/security-best-practices/: index.html
docs/appendix/troubleshooting/: index.html
docs/appendix/troubleshooting-ros2/: index.html
docs/capstone/autonomous-humanoid/: index.html
docs/capstone/capstone-project-integration-guide/: index.html
docs/intro/: index.html
docs/isaac-platform/costmap-configuration/: index.html
docs/isaac-platform/edge-device-optimization-techniques/: index.html
docs/isaac-platform/goal-sending-interface/: index.html
docs/isaac-platform/isaac-ros-installation/: index.html
docs/isaac-platform/isaac-ros-perception/: index.html
docs/isaac-platform/isaac-ros-perception-setup/: index.html
docs/isaac-platform/isaac-sim-intro/: index.html
docs/isaac-platform/navigation/: index.html
physical-ai-book/: .gitignore  README.md  babel.config.js  docusaurus.config.js  package-lock.json  package.json  sidebars.js
physical-ai-book/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json  site-metadata.json
physical-ai-book/docs/: accessibility-statement.md  intro.md
physical-ai-book/examples/ros2_basics/: CMakeLists.txt  README.md  listener.cpp  listener_node.py  package.xml  talker.cpp  talker_listener.py  talker_node.py
physical-ai-book/scripts/: build-site.js  link-checker.js  verify_ros2_environment.py  verify_ros2_environment.sh
physical-ai-book/tests/: README.md
specs/1-physical-ai-humanoid-robotics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+198 files in other folders)
